fix text align on prices

--- a/src/styles/layout/_pricing.scss
+++ b/src/styles/layout/_pricing.scss
@@ -39,6 +39,7 @@
 
     h3 {
       color: hsl(271deg 30% 45%);
+      text-align: center;
     }
 
     ul {
